# book_store

./: .dockerignore  Dockerfile  docker-compose.yml  pyproject.toml  pyproject.toml.old
.github/workflows/: build.yml  workflow-pr.yml
bookstore/: settings.py  urls.py  views.py
bookstore/templates/: hello_world.html
order/: factories.py  # Ajuste para criar o Order sem passar user como argumento direto, se necessário
order/migrations/: 0001_initial.py  0002_order_user.py
order/tests/test_viewsets/: test_order_viewset.py  test_order_viewset.py  # Ajuste o uso do OrderFactory conforme o modelo
order/viewsets/: order_viewset.py
product/migrations/: 0001_initial.py
product/tests/test_viewset/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
