[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Bruno Pereira da Silva <bunros52@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pytest = ">=8.4.0,<9.0.0"
factory-boy = ">=3.3.3,<4.0.0"
django = ">=5.2.2,<6.0.0"
djangorestframework = ">=3.16.0,<4.0.0"
django-rest-framework = ">=0.1.0,<0.2.0"
django-extensions = ">=4.1,<5.0"
django-debug-toolbar = ">=5.2.0,<6.0.0"
psycopg2-binary = "^2.9.10"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"